@@ -1,6 +1,6 @@
 /* md5.h - Declaration of functions and data types used for MD5 sum
    computing library functions.
-   Copyright (C) 1995, 1996 Free Software Foundation, Inc.
+   Copyright (C) 1995, 1996, 2011 Free Software Foundation, Inc.
    NOTE: The canonical source of this file is maintained with the GNU C
    Library.  Bugs can be reported to bug-glibc@prep.ai.mit.edu.
 
@@ -86,7 +86,11 @@ typedef unsigned long md5_uint32;
 
 	md5_uint32 total[2];
 	md5_uint32 buflen;
-	char buffer[128];
+	union
+	{
+		char buffer[128];
+		md5_uint32 buffer32[32];
+	};
 };
 
 /*
